--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
     <h1>This is my first Project</h1>
     <h2>hello</h2>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
 </body>
 </html>
