--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
     <h1>This is my first Project</h1>
     <h2>hello</h2>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis.</p>
 </body>
 </html>
