--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <h1>This is my first Project</h1>
     <h2>hello</h2>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium</p>
+    <h3>welcome</h3>
 </body>
 </html>
